2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.0 released.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.39 released.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Updated ua_UK and ru_RU translations from Igor Voytovich.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.38 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Don't try to auto-analyse audio of non-audio content.

	* Version 2.6.37 released.

2016-03-07  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.36 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.6.35 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Updated ua_UK and ru_RU translations from Igor Voytovich.

	* Version 2.6.34 released.

2016-03-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.33 released.

2016-03-06  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-03-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.32 released.

2016-03-05  Carl Hetherington  <cth@carlh.net>

	* Try to fix slowdowns on Windows XP (#771).

2016-03-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.31 released.

2016-03-02  c.hetherington  <cth@carlh.net>

	* New uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

	* Add configurable option to disable EBUR128
	analysis.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.30 released.

2016-03-01  c.hetherington  <cth@carlh.net>

	* Fix failure to recognise image sequence directories
	in some cases.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.29 released.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Fix hang / slowdown when previewing subtitles in some
	cases (#812).

2016-02-29  Carl Hetherington  <cth@carlh.net>
