@@ -1,5 +1,9 @@
 2016-03-08  Carl Hetherington  <cth@carlh.net>
 
+	* Bump ffmpeg to git master, somewhere post 3.0.
+
+2016-03-08  Carl Hetherington  <cth@carlh.net>
+
 	* Version 2.7.0 released.
 
 2016-03-08  Carl Hetherington  <cth@carlh.net>
